<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Nginx</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="nginx_status">Nginx Status</string>
    <string name="status">Status</string>

    <string name="properties">Properties</string>
    <string name="host">Host</string>
    <string name="port">Port</string>

    <string name="default_host">localhost</string>
    <string name="default_port">8080</string>

    <string name="nginx_is_running">Nginx is running</string>
    <string name="nginx_is_stopped">Nginx is stopped</string>
    
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    
    <string name="about">About</string>

    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="open_source_licenses_summary">Legal information about licenses</string>
    
    <string name="app_infomation_summary">Version %1$s</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>

    <string name="help_uri">https://bitbucket.org/ntakimura/android-nginx-app</string>

</resources>
